[gd_scene load_steps=31 format=2]

[ext_resource path="res://entities/player/willow_bullet_sprite.png" type="Texture" id=1]
[ext_resource path="res://entities/player/player_bullet.gd" type="Script" id=2]
[ext_resource path="res://entities/player/player_bullet_spriteset.png" type="Texture" id=3]
[ext_resource path="res://entities/player/player_bullet_particle_dark.png" type="Texture" id=4]
[ext_resource path="res://entities/player/player_bullet_trail.png" type="Texture" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.465116, 0.744186, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0.795349, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 32

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.409046 ), -1.36651, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 12.0
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 6.91
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.44
angular_velocity = 5.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.8
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 45, 45 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 45, 0, 45, 45 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 90, 0, 45, 45 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 135, 0, 45, 45 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 180, 0, 45, 45 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 45, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 90, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 135, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 180, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 45, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 90, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 135, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 180, 90, 45, 45 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 60.0
} ]

[sub_resource type="CircleShape2D" id=22]
radius = 18.0

[sub_resource type="Curve" id=23]
_data = [ Vector2( 0.00772201, 0.983795 ), 0.0, -1.88364, 0, 0, Vector2( 1, 0 ), -0.195644, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=24]
width = 32
curve = SubResource( 23 )

[sub_resource type="ParticlesMaterial" id=25]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 44.67
gravity = Vector3( 0, 98, 0 )
initial_velocity = 145.99
initial_velocity_random = 0.16
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 36.5
scale_curve = SubResource( 24 )

[node name="player_bullet" type="Area2D"]
modulate = Color( 1, 1, 1, 0.588235 )
collision_layer = 2
collision_mask = 8
script = ExtResource( 2 )

[node name="player_bullet_particles" type="Particles2D" parent="."]
amount = 12
lifetime = 0.25
process_material = SubResource( 5 )
texture = ExtResource( 4 )

[node name="player_bullet_sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 11.5179 )
texture = ExtResource( 1 )

[node name="player_bullet_animated" type="AnimatedSprite" parent="."]
frames = SubResource( 21 )
frame = 10
playing = true

[node name="player_bullet_colshape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 22 )

[node name="player_bullet_visibility_notifier" type="VisibilityNotifier2D" parent="."]
visible = false
rect = Rect2( -25, -25, 50, 50 )

[node name="player_bullet_trail" type="Particles2D" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.258824 )
emitting = false
amount = 20
lifetime = 0.4
local_coords = false
process_material = SubResource( 25 )
texture = ExtResource( 5 )
[connection signal="area_entered" from="." to="." method="_on_player_bullet_area_entered"]
[connection signal="viewport_exited" from="player_bullet_visibility_notifier" to="." method="_on_player_bullet_visibility_notifier_viewport_exited"]
